Fixed jump when opening the modal in CArticlesList

--- a/cristina-zuil-traductora/src/styles/global.scss
+++ b/cristina-zuil-traductora/src/styles/global.scss
@@ -40,7 +40,6 @@
 
 html, body {
   height: auto;
-  scrollbar-gutter: stable;
 }
 
 body {
